<resources>
    <string name="app_name">财富中国</string>
    <string name="register">注册</string>
    <string name="nav_home">首页</string>
    <string name="nav_invest">投资</string>
    <string name="nav_account">我的财富</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="login">登录</string>
    <string name="call">拨打</string>
    <string name="investing">投标中</string>
    <string name="loan_total_moeny">借款总额(元)</string>
    <string name="total_earing_str">总收益(元)</string>
    <string name="account_total_money_str">账户总额(元)</string>
    <string name="aready_lean_moeny_str">已借入金额(元)</string>
    <string name="account_details_str">账户明细</string>
    <string name="my_invest_str">我的投资</string>
    <string name="trade_details_str">交易记录</string>
    <string name="release_loan_str">我要借款</string>
    <string name="release_myloan_str">我的借款</string>
    <string name="my_bankcard_list_str">我的银行卡</string>
    <string name="invest_prograss_str">投资进度</string>
    <string name="complete_date_str">完成日期</string>
    <string name="my_red_paper_str">我的红包</string>
    <string name="my_gift_str">我的礼品</string>
    <string name="info_center_str">消息中心</string>
    <string name="help_center_str">帮助中心</string>
    <string name="account_info_str">账户详情</string>
    <string name="recharge_moeny_str">充值</string>
    <string name="withdraw_str">提现</string>
    <string name="my_custom_str">客服电话：</string>
    <string name="invest_info_str">投资详情</string>
    <string name="free_register_str">免费注册</string>
    <string name="forget_password_str">忘记密码?</string>
    <string name="modify_pass_word">修改登录密码</string>
    <string name="modify_bind_phone_str">修改手机绑定</string>
    <string name="identity_verification_str">身份验证</string>
    <string name="find_password_str">找回密码</string>
    <string name="invest_date_str">投资期限</string>
    <string name="year_of_rate_str">年化利率</string>
    <string name="original_mobile_check_str">原手机号验证</string>
    <string name="obile_check_str">手机号验证</string>
    <string name="hot_reccomend_str">热门推荐</string>
    <string name="expect_year_of_rate_str">预期年化收益</string>
    <string name="can_use_total_moeny_str">可用总额(元)</string>
    <string name="total_invest_str">投资总额</string>
    <string name="start_invest_money_str">起投金额</string>
    <string name="invest_money_str">投资金额(元)</string>
    <string name="invest_atonce_str">立即投资</string>
    <string name="remain_could_invest_str"> 剩余可投金额</string>
    <string name="adll_str">全部</string>
    <string name="add">添加</string>
    <string name="is_released">已发布</string>
    <string name="not_released">未发布</string>
    <string name="product_details_str">产品详情</string>
    <string name="vertify_result_str">审核结果</string>
    <string name="relative_data_str">相关资料</string>
    <string name="holding">持有中</string>
    <string name="certification_str">实名认证</string>
    <string name="mobile_phone_binding_str">修改手机</string>
    <string name="loging_password_str">修改密码</string>
    <string name="gesture_password_str">手势密码</string>
    <string name="modify_gesture_password_str">修改手势密码</string>
    <string name="about_us_str">关于我们</string>
    <string name="feedback_str">意见反馈</string>
    <string name="auto_invest_str">自动投标</string>
    <string name="helper_center_str">帮助中心</string>
    <string name="exsit_login_str">退出登录</string>
    <string name="account_set_str">账户设置</string>
    <string name="withdraw_record_str">提现记录</string>
    <string name="remainsDays_str">剩余期限(天)</string>
    <string name="finishTime_str">完成日期</string>
    <string name="product_name">产品名称</string>
    <string name="returnmoney_way">还款方式</string>
    <string name="buy_time">买入时间</string>
    <string name="finish_time">结束时间</string>
    <string name="should_return_money_str">到期应收本息(元)</string>
    <string name="should_return_money_without_unit_str">到期应收本息</string>
    <string name="invest_total_moeny_str">投资总额(元)</string>
    <string name="interest_received_str">已收本息(元)</string>
    <string name="current_interest_received_str">当前收益(元)</string>
    <string name="invest_again">再次投资</string>
    <string name="loan_info_str">借款详情</string>
    <string name="freen_moeny">冻结金额</string>
    <string name="bid_freen_moeny">竞标冻结金额</string>
    <string name="withdraw_freen_moeny">提现冻结金额</string>
    <string name="forget_bid_dopisit_moeny">悔标保证金</string>
    <string name="recharge_moeny">充值金额</string>
    <string name="withdraw_moeny">提现金额</string>
    <string name="wait_return_moeny">待收本金(元)</string>
    <string name="loan_out_moeny">借出金额(元)</string>
    <string name="interest_to_be_received">待收利息</string>
    <string name="interest_received">已收利息</string>
    <string name="expect_return_moeny_str">逾期待收金额</string>
    <string name="recent_return_money_date">最近应收款日</string>
    <string name="expect__moeny_str">预期收益:</string>
    <string name="expect__moeny">预期收益</string>
    <string name="loan_in_moeny">借款金额(元)</string>
    <string name="repaid_moeny">已还金额(元)</string>
    <string name="return_moeny_str">待收金额</string>
    <string name="interest_expense_moeny">利息支出金额</string>
    <string name="recent_return_money_date2">最近应还款日</string>
    <string name="expect_give_moeny_str">逾期待还金额</string>
    <string name="complete_str">完成</string>
    <string name="edit_str">编辑</string>
    <string name="actual_moeny_str">实际到账金额</string>
    <string name="withdraw_bank_str">提现银行卡</string>
    <string name="withdraw_submit_right_str">提现申请已提交</string>
    <string name="recharge">充值</string>
    <string name="bind_and_recharge">绑定并充值银行卡</string>
    <string name="withdraw_right">提现成功</string>
    <string name="rechargemoeny_str">充值金额</string>
    <string name="next_step_str">下一步</string>
    <string name="bank_num_str">银行卡号</string>
    <string name="please_enter_recharge_moeny_hint">请输入充值金额</string>
    <string name="please_enter_bank_num_hint">请输入银行卡卡号</string>
    <string name="recharge_right_str">充值成功!</string>
    <string name="recharge_right">充值成功</string>
    <string name="recharge_bank_str">充值银行卡</string>
    <string name="buy_money">购买金额</string>
    <string name="buy_bankName">购买银行卡</string>
    <string name="buy">购买</string>
    <string name="buy_money_hint_str">请输入100的整数倍</string>
    <string name="remains_can_buy_money_str">产品剩余可投金额:</string>
    <string name="yuan_str">元</string>
    <string name="back_str">返回</string>
    <string name="bind_bank_str">绑定银行卡</string>
    <string name="delete_str">删除</string>
    <string name="latested_str">最新</string>
    <string name="commit_str">提交</string>
    <string name="invest_bid_name_str">投标人</string>
    <string name="invest_bid_money_yuan_str">投标金额(元)</string>
    <string name="invest_bid_date_str">投标时间</string>
    <string name="is_over">已完成</string>
    <string name="CardholderExplain">持卡人说明</string>
    <string name="loading">加载中...</string>
    <string name="exit_str">再按一次退出财富中国!</string>
    <string name="please_enter_username_hint">请输入用户名</string>
    <string name="please_enter_password_hint">请输入密码</string>
    <string name="please_enter_realusername_hint">请输入真实姓名</string>
    <string name="please_enter_idcrad_hint">请输入身份证号码</string>
    <string name="dialog_no_more_data">暂无更多数据!</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_kindly_title">温馨提示</string>
    <string name="request_erro_str">请求失败!</string>
    <string name="tel_cant_be_nempty">手机号码不能为空!</string>
    <string name="input_tips_user_cant_be_nempty">用户名不能为空!</string>
    <string name="input_tips_password_cant_be_nempty"> 密码不能为空!</string>
    <string name="errro_content_can_not_bt_empty_hint">内容不能为空！</string>
    <string name="erro_min_length_must_larger_than_ten_hint">字数必须大于10个！</string>
    <string name="six_start_str">******</string>
    <string name="sure_to_use_this_red_paper">确定要使用该红包么？</string>
    <string name="authentication_right">认证成功!</string>
    <string name="real_name_can_not_be_empty">真实姓名不能为空!</string>
    <string name="id_card_can_not_be_empty">身份证不能为空!</string>
    <string name="auto_login_failed">自动登陆失败，请手动登陆。</string>
    <string name="delete_loan">删除借款</string>
    <string name="buy_right">购买成功!</string>
    <string name="caculationing_str">计算中...</string>
    <string name="caculation_erro_str">计算失败!</string>
    <string name="submit_right">提交成功!</string>
    <string name="modify_login_psw_right">修改登录密码成功!</string>
    <string name="old_psw_cant_be_empty">旧密码不能为空!</string>
    <string name="new_psw_cant_be_empty">新密码不能为空!</string>
    <string name="check_new_psw_cant_be_empty">确认新密码不能为空!</string>
    <string name="twice_psw_are_not_same">两次密码不一致!</string>
    <string name="psw_rules">密码为6到16位字符!</string>
    <string name="please_enter_ems_code">请输入短信验证码!</string>
    <string name="please_get_ems_code">请获取短信验证码!</string>
    <string name="modify_tel_right">修改绑定手机号成功!</string>
    <string name="please_enter_right_tel">请输入正确手机号码!</string>
    <string name="recharge_moeny_can_not_be_empty">充值金额不能为空!</string>
    <string name="no_invest">暂无投资!</string>
    <string name="recharge_moeny_must_over_zero">充值金额必须大于0!</string>
    <string name="bank_no_can_not_be_empty">银行卡号不能为空!</string>
    <string name="vertifycode_cant_be_nempty">验证码不能为空!</string>
    <string name="withdraw_moeny_cant_be_nempty">提现金额不能为空!</string>
    <string name="withdraw_moeny_must_be_number">提现金额只能为数字!</string>
    <string name="withdraw_moeny_initial_erro_please_return_in">提现初始化失败，请重新进入该界面!</string>
    <string name="withdraw_moeny_must_be_lower_enableCanWithdrawMoeny">提现金额必须小于可提现金额!</string>
    <string name="get_bankList_is_null">获取到已绑定银行卡数为空。</string>
    <string name="withdraw_rules">提现规则：只允许保留一张银行卡，请到电脑版[提现管理]选择您要保留的银行卡。</string>
    <string name="check_withdraw">您确定提现吗？</string>
    <string name="can_not_find_SD">未找到存储卡，无法存储照片！</string>
    <string name="check_exsit">是否确认退出？</string>
    <string name="add_right">添加成功!</string>
    <string name="bank_no_must_be_number">银行卡号只能为数字!</string>
    <string name="bank_no_not_right">银行卡号不正确!</string>
    <string name="fixed_moeny_can_not_be_empty">固定金额不能为空!</string>
    <string name="loan_bid_rate_can_not_be_empty">借款标总额比例不能为空!</string>
    <string name="account_remains_moeny_can_not_be_empty">账户余额不能为空!</string>
    <string name="check_delete">是否确认删除？</string>
    <string name="sure_to_delete_bank">您确认删除银行卡？</string>
    <string name="erro_rate_range">利率范围填写有误!</string>
    <string name="erro_loan_bid_range"> 借款期限填写有误!</string>
    <string name="auto_invest_moeny_must_be_choose"> 自动投资金额必选!</string>
    <string name="erro_loan_rate_range"> 借款利率填写有误!</string>
    <string name="loan_rate_can_not_be_empty"> 借款利率为必填!</string>
    <string name="no_gift"> 暂无礼品</string>
    <string name="no_red_paper"> 暂无红包</string>
    <string name="no_more_red_paper"> 没有更多红包了</string>
    <string name="no_more_withdraw_record"> 没有更多提现记录了</string>
    <string name="no_more_invest_record"> 没有更多投标记录了</string>
    <string name="no_record"> 暂无记录</string>
    <string name="user_rules"> 用户名为6-20个字符，不能是邮箱和手机号!</string>
    <string name="please_agree_compay_rules"> 请先同意财富中国用户协议!</string>
    <string name="please_enter_moeny"> 请输入购买金额!</string>
    <string name="invest_moeny_must_100"> 购买金额必须大于等于最小投标金额!</string>
    <string name="invest_moeny_must_lower_can_investMoeny"> 购买金额必须小于等于剩余可投金额!</string>
    <string name="invest_moeny_must_lower_accountMoeny"> 购买金额必须小于等于账户可用余额!</string>
    <string name="view_details">查看详情</string>
    <string name="collected">收起</string>
    <string name="camera">拍照</string>
    <string name="get_accros_potho">从手机相册中选取</string>
    <string name="jump_setup_gesture_code">跳过</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="use_other_account_login">使用其他账号</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
</resources>