<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_color"
    android:orientation="vertical"
    tools:context=".features.account.withdrawAndrecharge.WithDrawRightActivity">

    <include layout="@layout/view_header"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/recharge_right_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/recharge_right_str"
            android:textColor="@color/txt_3"
            android:textSize="@dimen/size_19" />
    </LinearLayout>

    <ImageView
        style="@style/iv_gray_horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/account_details_bottom_bg"
        android:orientation="vertical">

        <ImageView
            style="@style/iv_gray_horizontal_line"/>

        <RelativeLayout
            android:id="@id/rl_02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_42"
            android:background="@color/white">

            <TextView
                style="@style/account_set_txt"
                android:text="@string/recharge_moeny_str" />

            <TextView
                android:id="@id/tv_04"
                style="@style/myinvest_txt_gray_style" />
        </RelativeLayout>


        <ImageView
            style="@style/iv_gray_horizontal_line"
            android:layout_marginLeft="15dp"
           />

        <RelativeLayout
            android:id="@id/rl_05"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_42"
            android:background="@color/white">

            <TextView
                style="@style/account_set_txt"
                android:text="@string/recharge_bank_str" />

            <TextView
                android:id="@id/tv_06"
                style="@style/myinvest_txt_gray_style" />
        </RelativeLayout>

        <ImageView
            style="@style/iv_gray_horizontal_line" />

    </LinearLayout>

    <Button
        android:id="@id/btn_ok"
        style="@style/horizontal_red_item"
        android:layout_marginTop="57dp"
        android:text="@string/complete_str"
        android:textSize="@dimen/size_20" />
</LinearLayout>
