<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_color"
    android:orientation="vertical"
    tools:context="com.cfbb.android.features.authentication.RealNameAuthenticationActivity">

    <include layout="@layout/view_header"></include>

    <com.cfbb.android.widget.YCLoadingBg
        android:id="@+id/ycLoadingBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.cfbb.android.widget.YCLoadingBg>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView style="@style/iv_gray_horizontal_line" />

        <EditText
            android:id="@id/et_01"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/transparent_bg"
            android:hint="@string/please_enter_realusername_hint"
            android:maxLength="8"
            android:singleLine="true"
            android:textColorHint="@color/txt_gray9"
            android:textSize="@dimen/size_18" />

        <ImageView
            style="@style/iv_gray_horizontal_line"
            android:layout_marginLeft="15dp" />

        <EditText
            android:id="@id/et_02"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/transparent_bg"
            android:hint="@string/please_enter_idcrad_hint"
            android:maxLength="19"
            android:singleLine="true"
            android:textColorHint="@color/txt_gray9"
            android:textSize="@dimen/size_18" />

        <ImageView style="@style/iv_gray_horizontal_line" />
    </LinearLayout>

    <Button
        android:id="@id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_red_selector"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/size_20" />

</LinearLayout>
