<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@id/ll_01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/invest_bid_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1.5"
                    android:gravity="left|center"
                    android:textSize="@dimen/size_16"
                    android:text="@string/invest_bid_name_str" />

                <TextView
                    style="@style/invest_bid_txt"
                    android:layout_width="0dp"
                    android:textSize="@dimen/size_16"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|left"
                    android:text="@string/invest_bid_money_yuan_str" />

                <TextView
                    style="@style/invest_bid_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="@dimen/size_16"
                    android:gravity="center"
                    android:text="@string/invest_bid_date_str" />
            </LinearLayout>

            <ImageView
                style="@style/iv_gray_horizontal_line" />

            <ListView
                android:id="@id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:smoothScrollbar="true"
                android:fastScrollEnabled="false"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"></ListView>

        </LinearLayout>

        <com.cfbb.android.widget.YCLoadingBg
            android:id="@+id/ycLoadingBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></com.cfbb.android.widget.YCLoadingBg>
    </FrameLayout>


</LinearLayout>